--- a/docs/assets/css/sass/basics/elements.scss
+++ b/docs/assets/css/sass/basics/elements.scss
@@ -16,7 +16,13 @@ body{
   justify-content: space-between;
   min-height: 100vh;
   align-items: center;
-  overflow-x: hidden
+  overflow-x: hidden;
+
+  span,span:before,span:after{
+    background: $light-color;
+    box-shadow: 0 0 3px rgba(0,0,0,.5)
+  }
+
 }
 
 main{
@@ -99,7 +105,7 @@ button{
       flex-grow: 0;
       max-width: 60vw
     }
-    
+
   }
 
   @media (min-width: 1440px){main{max-width: 50vw}}
