--- a/docs/assets/css/sass/subpages/trivia.scss
+++ b/docs/assets/css/sass/subpages/trivia.scss
@@ -4,11 +4,6 @@
   overflow-y: scroll;
   align-items:flex-start;
 
-  span,span:before,span:after{
-    background: $light-color;
-    box-shadow: 0 0 3px rgba(0,0,0,.5)
-  }
-
   main{
     max-width: 100%;
     overflow: hidden
